# definetrsnew

./: .env  Cargo.toml  README.md
backend/: .env  Cargo.toml  pgsqlcmds.txt
backend/database/: definet.db
backend/migrations/: 20231121024308_TokenInfo.sql
backend/src/: constants.rs  lib.rs  main.rs  main_2.rs  models.rs  websocket.rs
backend/src/clients/: dbclient.rs  dbtraits.rs  etherscan.rs  mod.rs  pgdbclient.rs  web3_client.rs
backend/src/services/: api_service.rs  mod.rs  token_service.rs  websocket_service.rs
backend/src/utils/: mod.rs  token_util.rs
database/: definet.db
frontend/: package-lock.json  proxy.conf.json
frontend/src/: index.html
frontend/src/app/: app.config.ts  app.module.ts
frontend/src/app/demo/components/dashboard/: dashboard.component.html  (+2 more)
frontend/src/app/demo/models/: token-info.ts
frontend/src/app/demo/service/: config.service.ts  logging.service.ts  token.service.ts
frontend/src/app/layout/: app.layout.component.ts  app.topbar.component.html
frontend/src/app/layout/service/: app.layout.service.ts
frontend/src/app/models/: token-info.ts
frontend/src/app/services/: token.service.ts
frontend/src/app/token/token-list/: token-list.component.html  token-list.component.ts
frontend/src/assets/main/: config.json
frontend/src/environements/: environment.ts
migrations/: 20231121024308_TokenInfo.sql
src/: api_service.rs  constants.rs  dbclient.rs  dbtraits.rs  etherscan.rs  lib.rs  main.rs  main1.rs  main2.rs  main_1.rs  main_3.rs  models.rs  modles.rs  token_service.rs  web3_client.rs  websocket.rs
(+8 files in other folders)
