[package]
name = "definetrsnew"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.1"
ethbloom = "0.13.0"
ethereum-types = "0.14.1"
ethers = "2.0.11"
futures = "0.3.29"
hex = "0.4.3"
log = "0.4.20"
reqwest = "0.11.22"
serde = "1.0.192"
tiny-keccak = "2.0.2"
tokio = { version="1.34.0", features=["full"]}
web3 = "0.19.0"
